--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -58,6 +58,8 @@ div#abelujo
 
     a.btn.btn-default(href="#", title='{% trans "Remember to command this card. Add it to the list for later." %}', onclick="card_command({{ object.pk }})")
       i.glyphicon.glyphicon-shopping-cart
+      span &nbsp; x
+        span(id="nb_to_command") {{ object.quantity_to_command }}
 
     h3 {{ object.title }}
 
