--- a/templates/search/preferences.jade
+++ b/templates/search/preferences.jade
@@ -15,6 +15,8 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 {% extends "base.jade" %}
 
+{% block pagetitle %} Abelujo - Preferences {% endblock %}
+
 {% block content %}
 
 {% load i18n %}
@@ -23,9 +25,8 @@
 {% load ngfilter %}
 
 if messages
-  ul.messages
-    for msg in messages
-      li  {{ msg }}
+  for msg in messages
+    div.alert.alert-info  {{ msg }}
 
 h1 {% trans "Preferences" %}
 .row
