--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -241,6 +241,8 @@ div(ng-cloak, ng-controller="collectionController")
         td
           a.btn.btn-default(href="#", title='{% trans "Remember to command this card. Add it to the list for later." %}', ng-click="do_card_command(card.id)")
             i.glyphicon.glyphicon-shopping-cart
+            span &nbsp; x
+              span(id="command{{ 'card.id' | ng }}") {{ 'card.quantity_in_command' | ng }}
 
  .col-md-7
       .btn-group
