new Reception menu
for #222

See all shelves.
Choose a shelf and scan books.
  If it's a new book, it gets its shelf assigned.
  If it already had one, see an alert message.
We can also scan from the global list.
  In that case, if the book has no shelf, we get a widget to choose
  it.

todo: some cleanup, and save reception objects, so we can see what was
added this day.

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -30,10 +30,10 @@
 {% load humanize %}
 
 //
-// No Angular nor Vue, uses abelujo-js.js
+// No Angular nor Vue, uses card.js
 //
 
-div#abelujo
+//div#abelujo
   hello(title="hello vue !")
 
 .row
@@ -165,9 +165,8 @@ div#abelujo
                 if object.shelf
                   {{ object.shelf }}
               td(id="shelf-select-td")
+                // on-change: event listener in card.js
                 select(id="shelf-select", name="shelves")
-                  //- for shelf in shelves
-                    option(value="{{ shelf.name }}" {% if shelf == object.shelf %} selected="selected" {% endif %})
 
           if object.theme
             tr
