--- a/templates/base.jade
+++ b/templates/base.jade
@@ -133,6 +133,9 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'boxes' }")
             a(href='{% url "boxes" %}') {% trans "Boxes" %}
 
+          li(ng-class="{active: url == 'reception' }")
+            a(href='{% url "reception" %}') {% trans "Reception" %}
+
           li(ng-class="{active: url == 'commands' }")
             a(href='{% url "basket_auto_command" %}') {% trans "Commands" %}
               span.badge.ng-cloak(title='{% trans "Number of cards needing a command." %}') {{ "auto_command_total" | ng }}
