--- a/templates/base.jade
+++ b/templates/base.jade
@@ -133,7 +133,7 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'boxes' }")
             a(href='{% url "boxes" %}') {% trans "Boxes" %}
 
-          li(ng-class="{active: url == 'reception' }")
+          //li(ng-class="{active: url == 'reception' }")
             a(href='{% url "reception" %}') {% trans "Reception" %}
 
           li(ng-class="{active: url == 'commands' }")
