--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -91,13 +91,16 @@ div.ng-cloak(ng-controller="sellController")
                   i.glyphicon.glyphicon-question-sign
 
 
-        //- .col-md-3
+      {% if show_selling_places %}
+      .row
+        .col-md-3
           form
             label {% trans "Selling place" %}
             select.form-control(
                 ng-model="place"
                 ng-options="it.name for it in places"
           )
+      {% endif %}
 
       .row
         .col-md-12
