--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -174,6 +174,7 @@ div.ng-cloak(ng-controller="sellController")
                   ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
                 )
                 span.input-group-addon {{ 'card.currency' | ng }}
+                div(ng-show="card.price_alert.price_changed") {% trans "ancien prix:" %} &nbsp; {{ 'card.price_alert.old_price' | ng }}
 
         .col-md-1
             select(
