--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -218,7 +218,7 @@
     </div>
 
 
-    <div class="invoice-box new-page">
+    <div class="invoice-box">
       <table>
         <thead>
           <tr>
