Sell bill: show VAT total
[ci skip]

--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -214,6 +214,13 @@
                    {% trans "Total" %}: {{ total_discounted_fmt }}
                 </td>
             </tr>
+
+            <tr>
+              <td></td>
+              <td>
+                {% trans "dont TVA" %}: {{ total_vat_fmt }}
+              </td>
+            </tr>
         </table>
     </div>
 
