--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -51,15 +51,17 @@
       a.btn.btn-default(href="{% url 'card_move' object.pk %}") {% trans 'Move…' %}
 
   .col-lg-7
-    a.btn.btn-default(href="#", title='{% trans "Add 1 copy to the default place" %}', onclick="card_add_one_to_default_place({{ object.pk }})")
-      i.glyphicon.glyphicon-plus 1
-    a.btn.btn-default(href="#", title='{% trans "Remove 1 copy to the default place" %}', onclick="card_remove_one_from_default_place({{ object.pk }})")
-      i.glyphicon.glyphicon-minus 1
+    .btn-group
+      a.btn.btn-default(href="#", title='{% trans "Add 1 copy to the default place" %}', onclick="card_add_one_to_default_place({{ object.pk }})")
+        i.glyphicon.glyphicon-plus 1
+      a.btn.btn-default(href="#", title='{% trans "Remove 1 copy to the default place" %}', onclick="card_remove_one_from_default_place({{ object.pk }})")
+        i.glyphicon.glyphicon-minus 1
 
-    a.btn.btn-default(href="#", title='{% trans "Remember to command this card. Add it to the list for later." %}', onclick="card_command({{ object.pk }})")
-      i.glyphicon.glyphicon-shopping-cart
-      span &nbsp; x
-        span(id="nb_to_command") {{ object.quantity_to_command }}
+    .btn-group(style="margin-left: 1em")
+      a.btn.btn-warning(href="#", title='{% trans "Remember to command this card. Add it to the list for later." %}', onclick="card_command({{ object.pk }})")
+        i.glyphicon.glyphicon-shopping-cart
+        span &nbsp; x
+          span(id="nb_to_command") {{ object.quantity_to_command }}
 
     // ONGOING hide button
     //button(type="button", class="btn btn-default", data-toggle="modal", data-target="#myModal")
