add favicon.ico \o/

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -21,6 +21,7 @@
 
 html(ng-app="abelujo")
   head
+    link(rel="icon", href="{% static 'favicon.ico' %}")
     // warning: also set in gulpfile.js
     link(rel='stylesheet', type='text/css', href='{% static "search/style.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "css/select.min.css" %}')
