--- a/templates/base.jade
+++ b/templates/base.jade
@@ -33,7 +33,7 @@ html(ng-app="abelujo")
 
     script(defer, src="https://cdn.jsdelivr.net/npm/notiflix@2.1.3/dist/AIO/notiflix-aio-2.1.3.min.js")
     script(src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js")
-    script(ng-src="{% static 'app.js' %}")
+    //- script(ng-src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
 
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
