--- a/templates/base.jade
+++ b/templates/base.jade
@@ -35,6 +35,7 @@ html(ng-app="abelujo")
     script(src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js")
     //- script(ng-src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
+    script(type='text/javascript', src="{% static 'prelude-browser-min.js' %}")
 
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
