static assets: include datejs, rm from bower
for #195

[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -36,6 +36,7 @@ html(ng-app="abelujo")
     //- script(ng-src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
     script(type='text/javascript', src="{% static 'prelude-browser-min.js' %}")
+    script(type='text/javascript', src="{% static 'date-fr-FR.js' %}")
 
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
