--- a/templates/base.jade
+++ b/templates/base.jade
@@ -24,10 +24,7 @@ html(ng-app="abelujo")
     link(rel="icon", href="{% static 'favicon.ico' %}")
     // warning: also set in gulpfile.js
     link(rel='stylesheet', type='text/css', href='{% static "search/style.css" %}')
-    link(rel='stylesheet', type='text/css', href='{% static "css/select.min.css" %}')
-    link(rel='stylesheet', type='text/css', href='{% static "css/jquery.dataTables.min.css" %}')
-    link(rel='stylesheet', type='text/css', href='{% static "css/loading-bar.min.css" %}')
-    link(rel='stylesheet', type='text/css', href='{% static "css/hotkeys.min.css" %}')
+    link(rel='stylesheet', type='text/css', href='{% static "css/build/vendor.css" %}')
 
     script(defer, src="https://cdn.jsdelivr.net/npm/notiflix@2.1.3/dist/AIO/notiflix-aio-2.1.3.min.js")
     script(src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js")
