new menu: Reception
(unlock feature flag, it was previously hidden from the menu)

add books directly into their shelf. Receiving new books must be
faster than with lists.

fixes #222

[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -136,7 +136,7 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'boxes' }")
             a(href='{% url "boxes" %}') {% trans "Boxes" %}
 
-          //li(ng-class="{active: url == 'reception' }")
+          li(ng-class="{active: url == 'reception' }")
             a(href='{% url "reception" %}') {% trans "Reception" %}
 
           li(ng-class="{active: url == 'commands' }")
