Add page that lists all the catalogue selection
for #225

[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -79,6 +79,9 @@ html(ng-app="abelujo")
                 li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/cards-without-eans') {% trans "Cards without EANs" %}
+                li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/catalogue-selection') {% trans "Sélection du libraire" %}
+
         form.navbar-form.navbar-left
           .form-group
             input.form-control#navbar-input(
