(minor) Sell: defensive
when the user erases payment 2 instead of setting to 0 or using the X
button, we had a small bug.

fixes
https://sentry.io/organizations/vindarel/issues/2305763894/?project=163026&query=is%3Aunresolved+level%3Aerror&sort=date&statsPeriod=14d

[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -79,6 +79,7 @@ html(ng-app="abelujo")
                 li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/cards-without-eans') {% trans "Cards without EANs" %}
+                li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/catalogue-selection') {% trans "Sélection du libraire" %}
 
