--- a/templates/search/reception.jade
+++ b/templates/search/reception.jade
@@ -76,7 +76,7 @@ div(ng-cloak, ng-controller="receptionController")
        button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers (d)" %}')
          i.glyphicon.glyphicon-th-list
 
-       a.btn.btn-default(href="http://abelujo.cc/docs/lists/", target="_blank", title='{% trans "Read the documentation" %}')
+       a.btn.btn-default(href="http://abelujo.cc/docs/reception/", target="_blank", title='{% trans "Read the documentation" %}')
          i.glyphicon.glyphicon-question-sign
 
     .col-md-2
