My Stock: fix Price filter not showing anything

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -27,6 +27,8 @@
 
 div(ng-cloak, ng-controller="collectionController")
 
+ div#data-currency(data-currency="{{ currency }}")
+
  {% if messages %}
  ul.messages
   {% for msg in messages %}
