--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -62,6 +62,7 @@ div.ng-cloak(ng-controller="sellController")
               ng-model='client_selected'
               uib-typeahead='client.__repr__ for client in getClients($viewValue)'
               typeahead-min-length="3"
+              typeahead-wait-ms="200"
               typeahead-on-select="select_client($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
               id="client-input"
@@ -112,6 +113,7 @@ div.ng-cloak(ng-controller="sellController")
               ng-model='copy_selected'
               uib-typeahead='copy.repr for copy in getCards($viewValue)'
               typeahead-min-length="3"
+              typeahead-wait-ms="300"
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
               id="default-input"
