--- a/templates/search/reception.jade
+++ b/templates/search/reception.jade
@@ -90,6 +90,7 @@ div(ng-cloak, ng-controller="receptionController")
               ng-model='copy_selected'
               uib-typeahead='copy.repr for copy in getCards($viewValue)'
               typeahead-min-length="3"
+              typeahead-wait-ms="300"
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
               id="default-input"
