--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -123,7 +123,8 @@ div.ng-cloak(ng-controller="sellController")
             i.glyphicon.glyphicon-search(ng-show='loadingCards')
 
   .row(style="margin-left: 1em")
-          h3 {{ 'getTotalCopies() ' | ng }} {% trans "titles selected. Total:" %} {{ 'total_price ' | ng }} {{ 'cards_selected[0].currency' | ng }}
+          h3 {{ 'getTotalCopies() ' | ng }} {% trans "titles selected." %}
+            div(ng-show="cards_selected.length") {% trans "Total:" %} {{ 'total_price ' | ng }} {{ 'cards_selected[0].currency' | ng }}
           span Payer
             input(type="number", step="0.01", ng-model="total_payment_1")
             span &nbsp; en
