Feature flag to show Reservation button on Card page
in config.py (out of source control), set

FEATURE_SHOW_RESERVATION_BUTTON = True

for #223 [ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -72,11 +72,12 @@
         a.btn.btn-default#heart(href="", title='{% trans "Select this card for the online catalogue special selection." %}', onclick="card_catalogue_select({{ object.pk }})")
           i.glyphicon.glyphicon-heart
 
-    // ONGOING reservation hide button
-    //- button(type="button", class="btn btn-default", data-toggle="modal", data-target="#reserveModal", title="Réserver pour un client")
-      i.glyphicon.glyphicon-user
-      span &nbsp; x
-          span(id="nb_to_command") {{ object.quantity_clients_reserved }}
+    // WIP reservation button. Enable with feature flag in settings.
+    if feature_show_reservation_button
+      button(type="button", class="btn btn-default", data-toggle="modal", data-target="#reserveModal", title="Réserver pour un client")
+        i.glyphicon.glyphicon-user
+        span &nbsp; x
+            span(id="nb_to_command") {{ object.quantity_clients_reserved }}
 
     h3 {{ object.title }}
 
