--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -197,7 +197,11 @@
 
           tr(class="{% if object.quantity > 0 %} active {% elif object.quantity < 0 %} danger {% endif %}")
             td {% trans "In stock" %}
-            td(id="in_stock") {{ object.quantity_compute }}
+            td(id="in_stock")
+              span {{ object.quantity_compute }}
+              if object.quantity_clients_reserved
+                span &nbsp; ({% trans "reserved" %}: &nbsp;
+                span(id="reservation") {{ object.quantity_clients_reserved }})
 
           tr
             td {% trans "Presente in" %}
