(minor) Card show: hide "Deposits" line if "In Deposits" is 0
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -235,14 +235,15 @@
           tr(class="{% if object.quantity_deposits > 0 %} active {% elif object.quantity_deposits < 0 %} danger {% endif %}")
             td {% trans "In deposits" %}
             td {{ object.quantity_deposits }}
-          tr
-            td {% trans "Deposits" %}
-            td
-                for dep_tup in object.deposits
-                  div: a(href="/deposits/{{ dep_tup.1 }}") {{ dep_tup.0 }}
-                if not object.deposits and not object.quantity
-                  span --- &nbsp;
-                    a(href="{% url 'deposits_new' %}") ({% trans "Create" %})
+          if object.quantity_deposits
+            tr
+              td {% trans "Deposits" %}
+              td
+                  for dep_tup in object.deposits
+                    div: a(href="/deposits/{{ dep_tup.1 }}") {{ dep_tup.0 }}
+                  if not object.deposits and not object.quantity
+                    span --- &nbsp;
+                      a(href="{% url 'deposits_new' %}") ({% trans "Create" %})
 
    .row
           if object.summary
