--- a/templates/search/reception.jade
+++ b/templates/search/reception.jade
@@ -248,7 +248,7 @@ div(ng-cloak, ng-controller="receptionController")
                 ng-disabled="resa.disabled",
                 title="Enlever ce livre du fonds"
                 ) OK &nbsp;
-                i.glyphicon.glyphicon-minus
+                i.glyphicon.glyphicon-ok
               a(href="mailto:{{'resa.client.email'|ng}}?subject={% trans 'Your reservation has arrived' %}&body={% trans 'Hello' %} %0D%0A %0D%0A {{ 'body' | ng }}")
                 i.glyphicon.glyphicon-envelope(title="{% trans 'Write to' %}  {{ 'distributor.name' | ng}} {% trans ' with your desktop mail client' %}", style="margin-left: 1em")
 
