Card, client reservation: use HTML datalist for simple autocomplete
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -317,7 +317,12 @@ div.modal(id="reserveModal")
 
       div.modal-body
         h5 {% trans "Clients" %}
-        select#clients-select
+        input#clients-input(list="clients-select")
+        datalist#clients-select
+          for client in clients
+            option(value="{{ client.repr }}", id="{{ client.id }}")
+
+        //- select#clients-select
           for client in clients
             option(id="{{ client.id }}") {{ client.repr }}
         button.btn.btn-success(type="button", onclick="validate_reservation()") OK
